Update:CTA 使用ItemUtils

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CTA/CTA.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CTA/CTA.cshtml
@@ -3,8 +3,10 @@
 
 
 
-@if (Model != null)
+@if (Model == null)
 {
+	return
+}
 	<div class="l-flex__item">
 		<div class="c-cardLecture">
 			<div class="c-cardLecture__caption">
@@ -26,4 +28,4 @@
 			</div>
 		</div>
 	</div>
-}
+
