--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CTA/CTA.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CTA/CTA.cshtml
@@ -1,31 +1,30 @@
 ﻿@using Feature.Wealth.Component.Models.CTA
 @model CTAModel
 
-
-
 @if (Model == null)
 {
-	return
+    return;
 }
-	<div class="l-flex__item">
-		<div class="c-cardLecture">
-			<div class="c-cardLecture__caption">
-				<img src="@Model.ImageUrl" class="c-cardLecture__img c-cardLecture__img--pc" alt="">
-				<img src="@Model.ImageUrl" class="c-cardLecture__img c-cardLecture__img--mb" alt="">
-			</div>
-			<div class="c-cardLecture__content">
-				<h3 class="c-cardLecture__title">
-					@if (Model.ShowIcon)
-					{
-						<i class="o-icon o-icon--xl o-icon--radio"></i>
-					}
-					@Html.Sitecore().Field(Template.MainTitle, Model.Item)
-				</h3>
-				<p class="c-cardLecture__desc"> @Html.Sitecore().Field(Template.Subtitle, Model.Item)</p>
-			</div>
-			<div class="c-cardLecture__action">
-				<a href="@Model.ButtonLink" class="o-btnListen">@Html.Sitecore().Field(Template.ButtonLinkText, Model.Item)</a>
-			</div>
-		</div>
-	</div>
+
+<div class="l-flex__item">
+    <div class="c-cardLecture">
+        <div class="c-cardLecture__caption">
+            <img src="@Model.ImageUrl" class="c-cardLecture__img c-cardLecture__img--pc" alt="">
+            <img src="@Model.ImageUrl" class="c-cardLecture__img c-cardLecture__img--mb" alt="">
+        </div>
+        <div class="c-cardLecture__content">
+            <h3 class="c-cardLecture__title">
+                @if (Model.ShowIcon)
+                {
+                    <i class="o-icon o-icon--xl o-icon--radio"></i>
+                }
+                @Html.Sitecore().Field(Template.MainTitle, Model.Item)
+            </h3>
+            <p class="c-cardLecture__desc"> @Html.Sitecore().Field(Template.Subtitle, Model.Item)</p>
+        </div>
+        <div class="c-cardLecture__action">
+            <a href="@Model.ButtonLink" class="o-btnListen">@Html.Sitecore().Field(Template.ButtonLinkText, Model.Item)</a>
+        </div>
+    </div>
+</div>
 
