--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/JoinMemberInfo/JoinMemberInfo.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/JoinMemberInfo/JoinMemberInfo.cshtml
@@ -18,9 +18,7 @@
                     <li class="l-feature__item">
                         <div class="c-feature c-feature--personalize">
                             <hgroup class="c-feature__content">
-                                <h3 class="c-feature__title">
-                                    @Html.Sitecore().Field(Template.JoinMemberInfo.Fields.Title1, Model.Item)
-                                </h3>
+                                <h3 class="c-feature__title">@Html.Sitecore().Field(Template.JoinMemberInfo.Fields.Title1, Model.Item)</h3>
                                 <p class="c-feature__desc">@Html.Sitecore().Field(Template.JoinMemberInfo.Fields.Description1, Model.Item)</p>
                             </hgroup>
                             <img src=@Model.Image1 srcset=@Model.Image1_3X alt="個人化商品推薦" class="c-feature__img">
