--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Banner/InnerBanner.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Banner/InnerBanner.cshtml
@@ -4,6 +4,6 @@
 <div class="c-kv">
     <div class="c-kv__wrap">
         <h1 class="c-kv__title u-ellipsis-2">@Html.Sitecore().Field(Template.Title, Model.Item)</h1>
-        <img src="~/themes/images/others/kv-topic.svg" class="c-kv__img" alt="">
+        <img src="@Model.ImageUrl" class="c-kv__img" alt="">
     </div>
 </div>
