--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/eFirstChoice/eFirstChoice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/eFirstChoice/eFirstChoice.cshtml
@@ -9,15 +9,15 @@
 <div class="l-mainstage">
     <div class="l-mainstage__wrap">
         <div class="l-mainstage__title">
-            <h1 class="t-title">@Html.Sitecore().Field(eFirstChoiceModel.Template.HotFund.Fields.MainTitle.ToString(), modelitem)</h1>
+            <h1 class="t-title">@Html.Sitecore().Field(Template.eFirstChoice.Fields.MainTitle.ToString(), modelitem)</h1>
         </div>
         <div class="l-mainstage__content">
             <div class="l-flex u-flex-col u-flex-gap-sm">
                 <div class="l-flex__item">
-                    @Html.Sitecore().Field(eFirstChoiceModel.Template.HotFund.Fields.SubTitle.ToString(), modelitem)
+                    @Html.Sitecore().Field(Template.eFirstChoice.Fields.SubTitle.ToString(), modelitem)
                 </div>
                 <div class="l-flex__item">
-                    <span class="t-note">@Html.Sitecore().Field(eFirstChoiceModel.Template.HotFund.Fields.Content.ToString(), modelitem)</span>
+                    <span class="t-note">@Html.Sitecore().Field(Template.eFirstChoice.Fields.Content.ToString(), modelitem)</span>
                 </div>
             </div>
         </div>
@@ -35,8 +35,8 @@
                         <option value="基金名稱低至高" data-sorting-column="ProductCode" data-sorting-class="is-asc">基金名稱低至高</option>
                         <option value="最新淨值高至低" data-sorting-column="NetAssetValue" data-sorting-class="is-desc">最新淨值高至低</option>
                         <option value="最新淨值低至高" data-sorting-column="NetAssetValue" data-sorting-class="is-asc">最新淨值低至高</option>
-                        <option value="幣別高至低" data-sorting-column="ValuationCurrency" data-sorting-class="is-desc">幣別高至低</option>
-                        <option value="幣別低至高" data-sorting-column="ValuationCurrency" data-sorting-class="is-asc">幣別低至高</option>
+                        <option value="幣別高至低" data-sorting-column="CurrencyCode" data-sorting-class="is-desc">幣別高至低</option>
+                        <option value="幣別低至高" data-sorting-column="CurrencyCode" data-sorting-class="is-asc">幣別低至高</option>
                         <option value="當日漲跌幅高至低" data-sorting-column="PercentageChangeInFundPrice" data-sorting-class="is-desc">當日漲跌幅高至低</option>
                         <option value="當日漲跌幅低至高" data-sorting-column="PercentageChangeInFundPrice" data-sorting-class="is-asc">當日漲跌幅低至高</option>
                         <option value="6個月績效高至低" data-sorting-column="SixMonthReturnOriginalCurrency" data-sorting-class="is-desc">6個月績效高至低</option>
@@ -82,7 +82,7 @@
                                     <div class="c-table__title">
                                         <span>幣別</span>
                                         <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
-                                        <a href="#" class="o-sorting" data-sorting-column="ValuationCurrency"></a>
+                                        <a href="#" class="o-sorting" data-sorting-column="CurrencyCode"></a>
                                     </div>
                                 </th>
                                 <th>
@@ -143,7 +143,7 @@
                                     <td class="c-cardTable__space"></td>
                                     <td class="c-cardTable__body" data-card-table-width="1/2">
                                         <div class="c-cardTable__title" data-length="5">最新淨值<br>(淨值日)</div>
-                                        <div class="c-cardTable__content">@item.NetAssetValue<br><span class="t-date">@item.NetAssetValueDate</span></div>
+                                        <div class="c-cardTable__content">@item.NetAssetValue<br><span class="t-date">@item.NetAssetValueDate.ToString("yyyy/MM/dd")</span></div>
                                     </td>
                                     <td class="c-cardTable__body" data-card-table-width="1/2">
                                         <div class="c-cardTable__title" data-length="5">
@@ -151,7 +151,7 @@
                                             <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
                                         </div>
                                         <div class="c-cardTable__content">
-                                            <a href="#" class="o-link">@item.ValuationCurrency</a>
+                                            <a href="#" class="o-link">@item.CurrencyName</a>
                                         </div>
                                     </td>
                                     <td class="c-cardTable__body" data-card-table-width="1/2">
@@ -198,7 +198,10 @@
                                         </div>
                                     </td>
                                     <td class="c-cardTable__footer" data-card-table-width="1/3">
-                                        <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+                                        @if (item.OnlineSubscriptionAvailability == "Y")
+                                        {
+                                            <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+                                        }
                                     </td>
                                 </tr>
                             }
@@ -265,7 +268,7 @@
             <div class="c-notice__inner">
                 <div class="c-notice__title">附註</div>
                 <div class="c-notice__content">
-                    @Html.Sitecore().Field(eFirstChoiceModel.Template.HotFund.Fields.NoteContent.ToString(), modelitem)
+                    @Html.Sitecore().Field(Template.eFirstChoice.Fields.NoteContent.ToString(), modelitem)
                 </div>
             </div>
         </div>
@@ -334,7 +337,7 @@
             if (!jQuery) {
                 return;
             }
-            var selectedId = @Html.Raw(Json.Encode(Model.selectedId));
+            var selectedId = @Html.Raw(Json.Encode(Model.SelectedId));
             var currentData = [];
 
             function ReturnView(selectedId, orderby, desc) {
