--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/eFirstChoice/eFirstChoiceReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/eFirstChoice/eFirstChoiceReturnView.cshtml
@@ -28,7 +28,7 @@
         <td class="c-cardTable__space"></td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
             <div class="c-cardTable__title" data-length="5">最新淨值<br>(淨值日)</div>
-            <div class="c-cardTable__content">@item.NetAssetValue<br><span class="t-date">@item.NetAssetValueDate</span></div>
+            <div class="c-cardTable__content">@item.NetAssetValue<br><span class="t-date">@item.NetAssetValueDate.ToString("yyyy/MM/dd")</span></div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
             <div class="c-cardTable__title" data-length="5">
@@ -36,7 +36,7 @@
                 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
             </div>
             <div class="c-cardTable__content">
-                <a href="#" class="o-link">@item.ValuationCurrency</a>
+                <a href="#" class="o-link">@item.CurrencyName</a>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
@@ -83,7 +83,10 @@
             </div>
         </td>
         <td class="c-cardTable__footer" data-card-table-width="1/3">
-            <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+            @if (item.OnlineSubscriptionAvailability == "Y")
+            {
+                <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
+            }
         </td>
     </tr>
 }
