--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/JoinMemberInfo/JoinMemberInfo.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/JoinMemberInfo/JoinMemberInfo.cshtml
@@ -1,4 +1,4 @@
-﻿@using Project.Wealth.Platform.Models.JoinMemberInfo
+﻿@using Feature.Wealth.Component.Models.JoinMemberInfo
 @model JoinMemberInfoModel
 
 @if (Model == null)
