Update: 調整架構 - 修改 layout - 調整 sitecore.config - 更新 xcms.dll 套件
Add: 新增功能
-新增 預設值 xcms config
- 新增客製化 combine.js
- 新增元件麵包屑
- 新增元件選單

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/Default.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/Default.cshtml
@@ -17,5 +17,7 @@
 @Html.Sitecore().Placeholder("main")
 
 @section Bottom {
-
+    @{
+        Html.RenderPartial("~/Views/Project/Wealth/Partial/Popup.cshtml");
+    }
 }
