--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/JoinMemberInfo/JoinMemberInfo.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/JoinMemberInfo/JoinMemberInfo.cshtml
@@ -44,6 +44,7 @@
                     </li>
                 </ul>
                 <div class="l-feature__actions">
+                    @* TODO：尚未製作登入後隱藏立即加入按鈕 *@
                     <a href="#popupLogin" class="o-btn o-btn--primary o-btn--lg" data-popup="true">立即加入</a>
                 </div>
             </div>
