--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Banner/InnerBanner.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Banner/InnerBanner.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Feature.Wealth.Component.Models.Banner
-@model Feature.Wealth.Component.Models.Banner.InnerBannerModel
+@model InnerBannerModel
 
 <div class="c-kv">
     <div class="c-kv__wrap">
-        <h1 class="c-kv__title u-ellipsis-2">@Html.Sitecore().Field(Template.Title, Model.Item)</h1>
+        <h1 class="c-kv__title u-ellipsis-2">@Html.Sitecore().Field(Templates.InnerBanner.Fields.Title.ToString(), Model.Item)</h1>
         <img src="@Model.ImageUrl" class="c-kv__img" alt="">
     </div>
 </div>
