Update: 更新SQL寫法 排序功能

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFundReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFundReturn.cshtml
@@ -42,7 +42,7 @@
 					<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
 				</div>
 				<div class="c-cardTable__content">
-					<a href="#" class="o-link">@item.ValuationCurrency </a>
+					<a href="#" class="o-link">@item.CurrencyName </a>
 				</div>
 			</td>
 			<td class="c-cardTable__body" data-card-table-width="1/2">
