--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GraphicCards/Graphic3Cards.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GraphicCards/Graphic3Cards.cshtml
@@ -24,7 +24,7 @@
                                 </div>
                             </div>
                             <div class="c-feature__plate">
-                                <img src="@Model.ImageUrl1" alt="" class="c-feature__img">
+                                <img src="@Model.ImageUrl1" srcset="@Model.ImageUrl3x1" alt="" class="c-feature__img">
                             </div>
                         </div>
                     </li>
@@ -38,7 +38,7 @@
                                 </div>
                             </div>
                             <div class="c-feature__plate">
-                                <img src="@Model.ImageUrl2" alt="" class="c-feature__img">
+                                <img src="@Model.ImageUrl2" srcset="@Model.ImageUrl3x2" alt="" class="c-feature__img">
                             </div>
                         </div>
                     </li>
@@ -54,7 +54,7 @@
                                 </div>
                             </div>
                             <div class="c-feature__plate">
-                                <img src="@Model.ImageUrl3" alt="" class="c-feature__img">
+                                <img src="@Model.ImageUrl3" srcset="@Model.ImageUrl3x3" alt="" class="c-feature__img">
                             </div>
                         </div>
                     </li>
